# lox

./: .gitignore  Makefile  lox  lox.c  meson.build  test.lox  token.h
include/: error.h  expr.h  parser.h  scanner.h  token.h
src/: README.md  error.c  main.c  parser.c  scanner.c
